--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GG - Graffiti Galaxy</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header-graffiti">
         <h1>GG</h1>
         <nav>
             <ul>
-                <li><a href="#inicio">Inicio 🎨</a></li>
+                <li><a href="#inicio">Inicio </a></li>
                 <li><a href="#galeria">Graffiti Galería</a></li>
                 <li><a href="#comunidad">Muros y Comunidad</a></li>
                 <li><a href="#contacto">Contacto</a></li>
@@ -23,10 +24,15 @@
     <main class="seccion-contenido">
         <section id="inicio">
             <h2>Bienvenido a GG</h2>
-            <p>¡Explora nuestro universo morado de arte urbano y graffiti!</p>
+            <p>¡Explora nuestro universo morado de arte urbano y graffiti! Esta sección usa una fuente fácil de leer.</p>
         </section>
         
-        </main>
+        <section id="galeria">
+            <h2>Nuestra Galería de Arte Urbano</h2>
+            <p>Pronto añadiremos las fotos más impactantes de nuestro graffiti morado.</p>
+        </section>
+
+    </main>
 
     <footer>
         <p>© 2025 GG - Diseño con estilo morado y graffiti.</p>
